//package eapli.ecourse.coursemanagement.application;
//
//import eapli.ecourse.infrastructure.persistence.PersistenceContext;
//import eapli.ecourse.usermanagement.domain.BaseRoles;
//import eapli.ecourse.usertypemanagement.studentusermanagement.domain.StudentUser;
//import eapli.ecourse.usertypemanagement.studentusermanagement.repositories.ClientInExamRepository;
//import eapli.ecourse.usertypemanagement.studentusermanagement.repositories.ClientUserRepository;
//import eapli.framework.application.UseCaseController;
//import eapli.framework.infrastructure.authz.application.AuthorizationService;
//import eapli.framework.infrastructure.authz.application.AuthzRegistry;
//
//@UseCaseController
//public class ListStudentExamsController
//{
//    private final AuthorizationService authz = AuthzRegistry.authorizationService();
//    private final ClientInExamRepository studentInExamRepository = PersistenceContext.repositories().studentsInExam();
//    private final ClientUserRepository clientUserRepository = PersistenceContext.repositories().clientUsers();
//
//    public Iterable<Exam> findAllStudentExams()
//    {
//        authz.ensureAuthenticatedUserHasAnyOf(BaseRoles.ADMIN, BaseRoles.POWER_USER, BaseRoles.STUDENT);
//        return studentInExamRepository.findAllExamsStudentIsAssign(getUserIdentity().identity());
//    }
//
//    public StudentUser getUserIdentity()
//    {
//        //Optional<UserSession> session = authz.session();
//        //SystemUser user = session.get().authenticatedUser();
//        //return clientUserRepository.findByMecanographicNumber(user.identity());
//        return null;
//    }
//}
